// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spacer /> renders correctly when bottom is set 1`] = `
<div
  className="coRmcH"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when horizontal is set 1`] = `
<div
  className="eWasao"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when left is set 1`] = `
<div
  className="eetuqs"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when right is set 1`] = `
<div
  className="gzOwWp"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when top is set 1`] = `
<div
  className="dxisMP"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when vertical is set 1`] = `
<div
  className="bWnqzP"
  size="1rem"
/>
`;
